Chenched main-block to accessories and chenched h2/h3

--- a/index.html
+++ b/index.html
@@ -162,40 +162,40 @@
 
         <!--block start Tanya-->
 
-        <section class="main-block">
-            <span class="main-block__title">Accessories</span>
-            <div class="main-block__spacer-line"></div>
-            <h2 class="main-block__text-title">Treat Yourself to New Accessories.</h2>
-            <p class="main-block__about">We create accessories that perfectly match the outfits.</p>
-            <p class="main-block__text-about">Your look will not be complete without accessories. We create beautiful
+        <section class="accessories">
+            <h2 class="accessories__text">Accessories</h2>
+            <span class="accessories__hr">-</span>
+            <h3 class="accessories__title">Treat Yourself to New Accessories.</h3>
+            <p class="accessories__about">We create accessories that perfectly match the outfits.</p>
+            <p class="accessories__text-about">Your look will not be complete without accessories. We create beautiful
                 and
                 sophisticated accessories that
                 highlight your natural beauty.</p>
-            <div class="main-block__bags">
+            <div class="accessories__bags">
                 <i class="fas fa-shopping-bag"></i>
-                <p class="main-block__bags">Leather bags</p>
-                <p class="main-block__bags-item">Totes, crossbodies, satchels, and other bags can't wait to see you in
+                <p class="accessories__bags">Leather bags</p>
+                <p class="accessories__bags-item">Totes, crossbodies, satchels, and other bags can't wait to see you in
                     our
                     online
                     and offline stores.</p>
             </div>
-            <div class="main-block__hats">
+            <div class="maccessories__hats">
                 <i class="fab fa-redhat"></i>
-                <p class="main-block__things">Hats and Caps</p>
-                <p class="main-block__things-item">Straw hat or sports cap? Choose what suits you best for the current
+                <p class="accessories__things">Hats and Caps</p>
+                <p class="accessories__things-item">Straw hat or sports cap? Choose what suits you best for the current
                     occasion
                     and
                     your style.</p>
             </div>
-            <div class="main-block__gloves">
+            <div class="accessories__gloves">
                 <i class="fas fa-mitten"></i>
-                <p class="main-block__stuff">Gloves and Scarves</p>
-                <p class="main-block__stuff-item">Thin lace gloves became trendy again last year! Look for these
+                <p class="accessories__stuff">Gloves and Scarves</p>
+                <p class="accessories__stuff-item">Thin lace gloves became trendy again last year! Look for these
                     accessories, as
                     well as for silk and woven
                     scarves in our store!</p>
             </div>
-            <div class="main-block__icon">
+            <div class="accessories__icon">
                 <img src="img/girl-rose.jpeg" alt="girl with rose">
             </div>
         </section>
