Added display:flex to <ul> in Catalog block

--- a/index.html
+++ b/index.html
@@ -135,24 +135,24 @@
                 <p>We create fashion clothes that are ready to wear. We love simple looks and share our vision with you.
                 </p>
             </div>
-            <ul class="catalog__body">
-                <li class="catalog__doby__dresses" style="display:inline-block;"><img src="img/catalog_block/girl1.jpg"
-                        alt="girl in a shirt" width="500">
+            <ul class="catalog__body" style="display:flex;">
+                <li class="catalog__doby__dresses"><img src="img/catalog_block/girl1.jpg"
+                        alt="girl in a shirt" width="100%">
                     <h4>Shirt & Tops</h4>
                     <p>Light tops and shirts made from natural materials such as linen, silk and others.</p>
                 </li>
-                <li class="catalog__doby__dresses" style="display:inline-block;"><img src="img/catalog_block/girl2.webp"
-                        alt="girl in a shirt" width="500">
+                <li class="catalog__doby__dresses"><img src="img/catalog_block/girl2.webp"
+                        alt="girl in a shirt" width="100%">
                     <h4>Dresses</h4>
                     <p>Casual and evening dresses in mini and midi lengths for your mazing looks</p>
                 </li>
-                <li class="catalog__doby__pants" style="display: inline-block;"><img src="img/catalog_block/girl3.webp"
-                        alt="girl in a shirt" width="500">
+                <li class="catalog__doby__pants"><img src="img/catalog_block/girl3.webp"
+                        alt="girl in a shirt" width="100%">
                     <h4>Pants</h4>
                     <p>Pants made from natural fabrics and our own collection of jeans that will last you for years</p>
                 </li>
-                <li class="catalog__doby__accessories" style="display:inline-block;"><img
-                        src="img/catalog_block/girl4.webp" alt="girl in a shirt" width="500">
+                <li class="catalog__doby__accessories"><img
+                        src="img/catalog_block/girl4.webp" alt="girl in a shirt" width="100%">
                     <h4>Accessories</h4>
                     <p>Belts, rings, gloves necklaces and more for the finishing touch to your look</p>
                 </li>
