--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <h2 id="why_choose_us" class="why_choose_us__text__name">WHY CHOOSE US</h2>
                 <p class="why_choose_us__text__slogan">
                     <span class="why_choose_us__text__slogan__dash">—</span>
-                    <span class="why_choose_us__text__slogan__text">Things You'll Love About Jolly House.</span>
+                    <h3>Things You'll Love About Jolly House.</h3>
                 </p>
                 <p class="why_choose_us__text__slogan">We create each outfit for you with great love and care.</p>
                 <div class="why_choose_us__text__slogan">
