Added h4 Svitlana block

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <h5>We create each outfit for you with great love and care.</h5>
                 <div class="why_choose_us__text__slogan">
                     <span class="why_choose_us__text__slogan__dash">—</span>
-                    <span class="why_choose_us__text__slogan__text">Jolly brand is:</span>
+                    <h4>Jolly brand is:</h4>
                     <ul>
                         <li class="why_choose_us__text__list__text__el1">Capsule collections you can wear on any
                             occasion;</li>
