--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
         <!--Svitlana Stasiuk block start-->
         <section class="why_choose_us">
             <div class="why_choose_us__text">
-                <h2 id="why_choose_us" class="why_choose_us__text__name">WHY CHOOSE US</h2>
-                <span class="why_choose_us__text__slogan__dash">—</span>
+                <h2 <span class="why_choose_us__text__slogan__dash">—</span>WHY CHOOSE US</h2>
                 <h3>Things You'll Love About Jolly House.</h3>
                 <h5>We create each outfit for you with great love and care.</h5>
                 <div class="why_choose_us__text__slogan">
