Add CSS part for header block

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header class="header">
-        <div style="background-image: url(img/background-logo.png); height: 700px;" class="header__entry-block">
+        <section class="header__entry-block">
             <!-- Sofiia block start-->
             <div class="header__top-row">
                 <div class="header__top-row-logo">
@@ -37,14 +37,16 @@
                 <p class="header__our-description">Jolly House is your destination for designer and comfortable clothes
                     for
                     any occasion.</p>
+                    <div class="header__buttons">
                 <a href="#" class="header__shop-now-link-button-white">
-                    Shop Now +
+                    Shop Now  +
                 </a>
                 <a href="#why_choose_us" class="header__about-us-link-button-black">
                     About Us
                 </a>
             </div>
-        </div>
+            </div>
+        </section>
         <!--Roman Hrytsyshyn end-->
     </header>
     <main class="main">
