Add CSS for top row logo

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <header class="header">
         <section class="header__entry-block">
             <!-- Sofiia block start-->
-            <div class="header__top-row">
+            <section class="header__top-row">
                 <div class="header__top-row-logo">
-                    <img width="200" src="img/logo.svg" alt="Fashion House Logo">
+                    <img src="img/logo.svg" alt="Fashion House Logo">
                 </div>
                 <nav class="header__nav">
                     <a href="#about-us">About Us</a>
@@ -26,7 +26,7 @@
                     <a href="#">Collection</a>
                     <a href="#">Contact us</a>
                 </nav>
-            </div>
+            </section>
             <!-- Sofiia block end-->
             <!--Roman Hrytsyshyn start-->
             <div class="header__info">
@@ -102,7 +102,7 @@
 
         <!--Svitlana Stasiuk block start-->
         <section class="why_choose_us">
-            <div class="why_choose_us__text">
+            <div class="why_choose_us__text" id="why_choose_us">
                 <h2 <span class="why_choose_us__text__slogan__dash">—</span>WHY CHOOSE US</h2>
                 <h3>Things You'll Love About Jolly House.</h3>
                 <h5>We create each outfit for you with great love and care.</h5>
