Add mobile responsive CSS part for header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <section class="header__entry-block">
             <!-- Sofiia block start-->
-            <section class="header__top-row">
+            <div class="header__top-row">
                 <div class="header__top-row-logo">
                     <img src="img/logo.svg" alt="Fashion House Logo">
                 </div>
@@ -26,17 +26,17 @@
                     <a href="#">Collection</a>
                     <a href="#">Contact us</a>
                 </nav>
-            </section>
+            </div>
             <!-- Sofiia block end-->
             <!--Roman Hrytsyshyn start-->
             <div class="header__info">
                 <h1 class="header__introduction"><strong>DESIGNER CLOTHES</strong></h1>
-                <p class="header__slogan">
+                <h3 class="header__slogan">
                     <span class="header__slogan__dash">—</span> Your New <br>Everyday Style.
-                </p>
-                <p class="header__our-description">Jolly House is your destination for designer and comfortable clothes
+                </h3>
+                <h2 class="header__our-description">Jolly House is your destination for designer and comfortable clothes
                     for
-                    any occasion.</p>
+                    any occasion.</h2>
                     <div class="header__buttons">
                 <a href="#" class="header__shop-now-link-button-white">
                     Shop Now  +
