Added css to history block

--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
         <div class="history">
             <div class="history__header">
                 <h2 class="history__header-top-row">HISTORY</h2>
-                <h3 class="history_header-title"><span>-</span>Moments That Matters for Us.</h3>
-                <p class="history_header-text">A few words about how our brand of designer clothes was created and
+                <h3 class="history__header-title"><span> - </span>Moments That Matters for Us.</h3>
+                <p class="history__header-text">A few words about how our brand of designer clothes was created and
                     developed.</p>
-            </div>
+            </div class="history__main">
             <div class="beginning">
                 <div class="beginning__img">
-                    <img src="img/history-block/1997.svg" alt="1997" width="200">
+                    <img src="img/history-block/1997.svg" alt="1997">
                 </div>
                 <div class="beginning__text">
                     <h4 class="beginning__text-title">
@@ -226,7 +226,7 @@
 
             <div class="featured">
                 <div class="featured__img">
-                    <img src="img/history-block/2001.svg" alt="2001" width="200">
+                    <img src="img/history-block/2001.svg" alt="2001">
                 </div>
                 <div class="featured__text">
                     <h4 class="featured__text-title">
@@ -240,7 +240,7 @@
 
             <div class="first-offline-store">
                 <div class="first-offline-store__img">
-                    <img src="img/history-block/2019.svg" alt="2019" width="200">
+                    <img src="img/history-block/2019.svg" alt="2019">
                 </div>
                 <div class="first-offline-store__text">
                     <h4 class="first-offline-store__text-title">
