fixed the error in history block

--- a/index.html
+++ b/index.html
@@ -208,8 +208,9 @@
                 <h3 class="history__header-title"><span> - </span>Moments That Matters for Us.</h3>
                 <p class="history__header-text">A few words about how our brand of designer clothes was created and
                     developed.</p>
-            </div class="history__main">
-            <div class="beginning">
+            </div>
+            <div class="history__main">
+                <div class="beginning">
                 <div class="beginning__img">
                     <img src="img/history-block/1997.svg" alt="1997">
                 </div>
