Added css styles for mobile version in about-us section

--- a/index.html
+++ b/index.html
@@ -52,52 +52,59 @@
     <main class="main">
         <!--Roman Fedoriv start block 3-->
         <section class="main__about-us">
-            <div class="main__about-us__left">
-                <div class="main__about-us__left__img-box">
-                    <img src="img/about-us/women-1.png" alt="Women in dress" class="main__about-us__left__img-box__img">
+            <div class="container">
+                <div class="main__about-us__left">
+                    <div class="main__about-us__left__img-box">
+                        <img src="img/about-us/women-1.png" alt="Women in dress"
+                            class="main__about-us__left__img-box__img">
+                    </div>
+                    <div class="main__about-us__left__quotation-marks">
+                        <img src="img/about-us/quotation-mark.png" alt="Quatation marks"
+                            class="main__about-us__left__quatation-marks__img">
+                    </div>
+                    <div class="main__about-us__text-box">
+                        <p class="main__about-us__text-box__text">"I have always had difficulties with buying clothes
+                            for every-day wear. Therefore, together with Linda, we decided to create our own brand.
+                        </p>
+                    </div>
+                    <div class="main__about-us__footer">
+                        <p class="main__about-us__footer__text"> <span
+                                class="main__about-us__footer__text__dash">—</span>
+                            Johanna Innsbruck</p>
+                    </div>
                 </div>
-                <div class="main__about-us__left__quotation-marks">
-                    <img src="img/about-us/quotation-mark.png" alt="Quatation marks"
-                        class="main__about-us__left__quatation-marks__img">
-                </div>
-                <div class="main__about-us__text-box">
-                    <p class="main__about-us__text-box__text">"I have always had difficulties with buying clothes
-                        for every-day wear. Therefore, together with Linda, we decided to create our own brand.
-                    </p>
-                </div>
-                <div class="main__about-us__footer">
-                    <p class="main__about-us__footer__text"> <span class="main__about-us__footer__text__dash">—</span>
-                        Johanna Innsbruck</p>
-                </div>
-            </div>
-            <div class="main__about-us__right">
-                <div class="main__about-us__right__name-box">
-                    <h2 class="main__about-us__right__name-box__name" id="about-us">ABOUT US</h2>
-                </div>
-                <div class="main__about-us__right__article-name-box">
-                    <h3 class="main__about-us__right__article-name-box__name"><span
-                            class="main__about-us__right__article-name-box__name__dash"> —</span>
-                        Comfort and Quality Come First.
-                    </h3>
-                </div>
-                <div class="main__about-us__right__article-box">
-                    <p class="main__about-us__right__article-box__text"><span
-                            class="main__about-us__right__article-box__text__text-1">
-                            Johanna Innsbruck and Linda Copperfield have always dreamed of comfortable women's clothing
-                            that would look appropriate
-                            in any circumstances.</span><br>
-                        <br>
-                        <span class="main__about-us__right__article-box__text__text-2">This is how the Jolly House brand
-                            appeared – it is
-                            a brand for women who like to feel confident, seductive, and stylish in any situation. We
-                            use only natural
-                            fabrics and pay great attention to details that make the difference.
-                        </span>
-                    </p>
-                </div>
-                <div class="main__about-us__right__img-box">
-                    <img src=" img/about-us/women-2.png" alt="Women in blouse and jacket"
-                        class="main__about-us__right__img-box__img">
+                <div class="main__about-us__right">
+                    <div class="main__about-us__right__name-box">
+                        <h2 class="main__about-us__right__name-box__name" id="about-us">ABOUT US</h2>
+                    </div>
+                    <div class="main__about-us__right__article-name-box">
+                        <h3 class="main__about-us__right__article-name-box__name"><span
+                                class="main__about-us__right__article-name-box__name__dash"> —</span>
+                            Comfort and Quality Come First.
+                        </h3>
+                    </div>
+                    <div class="main__about-us__right__article-box">
+                        <p class="main__about-us__right__article-box__text"><span
+                                class="main__about-us__right__article-box__text__text-1">
+                                Johanna Innsbruck and Linda Copperfield have always dreamed of comfortable women's
+                                clothing
+                                that would look appropriate
+                                in any circumstances.</span><br>
+                            <br>
+                            <span class="main__about-us__right__article-box__text__text-2">This is how the Jolly House
+                                brand
+                                appeared – it is
+                                a brand for women who like to feel confident, seductive, and stylish in any situation.
+                                We
+                                use only natural
+                                fabrics and pay great attention to details that make the difference.
+                            </span>
+                        </p>
+                    </div>
+                    <div class="main__about-us__right__img-box">
+                        <img src=" img/about-us/women-2.png" alt="Women in blouse and jacket"
+                            class="main__about-us__right__img-box__img">
+                    </div>
                 </div>
             </div>
         </section>
@@ -110,7 +117,8 @@
             <div class="why_choose_us__text" id="why_choose_us">
                 <h2>WHY CHOOSE US</h2>
                 <h3 class="why_choose_us__text__slogan">
-                    <span class="why_choose_us__text__slogan__dash">—</span>  <br>Things You'll Love About Jolly House. </h3>
+                    <span class="why_choose_us__text__slogan__dash">—</span> <br>Things You'll Love About Jolly House.
+                </h3>
                 <h5>We create each outfit for you with great love and care.</h5>
                 <div class="why_choose_us__text__slogan">
                     <span class="why_choose_us__text__slogan__dash">—</span>
@@ -180,7 +188,8 @@
                         highlight your natural beauty.</p>
                 </div>
                 <div class="accessories__bags">
-                    <div class="accessories__bags-img"><img class="accessories__bags-logo" src="img/accessories_block/bags.svg"></img>
+                    <div class="accessories__bags-img"><img class="accessories__bags-logo"
+                            src="img/accessories_block/bags.svg"></img>
                     </div>
                     <div class="accessories__about-prod">
                         <p class="accessories__bags-text">Leather bags</p>
@@ -192,7 +201,8 @@
                     </div>
                 </div>
                 <div class="accessories__hats">
-                    <div class="accessories__hats-img"> <img class="accessories__hats-logo" src="img/accessories_block/hats.svg"></img>
+                    <div class="accessories__hats-img"> <img class="accessories__hats-logo"
+                            src="img/accessories_block/hats.svg"></img>
                     </div>
                     <div class="accessories__about-things">
                         <p class="accessories__things">Hats and Caps</p>
@@ -204,7 +214,8 @@
                     </div>
                 </div>
                 <div class="accessories__gloves">
-                    <div class="accessories__gloves-img"> <img class="accessories__gloves-logo" src="img/accessories_block/gloves.svg"></img></div>
+                    <div class="accessories__gloves-img"> <img class="accessories__gloves-logo"
+                            src="img/accessories_block/gloves.svg"></img></div>
                     <div class="accessories__row">
                         <p class="accessories__stuff">Gloves and Scarves</p>
                         <p class="accessories__stuff-item">Thin lace gloves became trendy again last year! Look for
