--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
                     <span class="why_choose_us__text__slogan__dash">—</span>
                     <h4>Jolly brand is:</h4>
                     <ul>
-                        <li class="why_choose_us__text__list__text__el1">Capsule collections you can wear on any
+                        <li class="why_choose_us__text__list">Capsule collections you can wear on any
                             occasion;</li>
-                        <li class="why_choose_us__text__list__text__el2">Only high quality and eco-friendly materials;
+                        <li class="why_choose_us__text__list">Only high quality and eco-friendly materials;
                         </li>
-                        <li class="why_choose_us__text__list__text__el3">A great variety of outfits for every taste and
+                        <li class="why_choose_us__text__list">A great variety of outfits for every taste and
                             size.</li>
                     </ul>
                 </div>
-                <p>We know the main problem of all women – a lot of clothes in the wardrobe but nothing to wear.
+                <p class="why_choose_us__text__list">We know the main problem of all women – a lot of clothes in the wardrobe but nothing to wear.
                     Therefore, we develop capsule collections where clothes go well with each other. You can mix them as
                     well to create stunning new looks! </p>
                 <a href="#" class="why_choose_us__lean-more-link">Learn More +</a>
