Changed p Svitlana block

--- a/index.html
+++ b/index.html
@@ -132,8 +132,10 @@
                             size.</li>
                     </ul>
                 </div>
-                <p class="why_choose_us__text__list">We know the main problem of all women – a lot of clothes in the wardrobe but nothing to wear.
-                    Therefore, we develop capsule collections where clothes go well with each other. You can mix them as
+                <p class="why_choose_us__text__list">We know the main problem of all women 
+                    – a lot of clothes in the wardrobe but nothing to wear.
+                    Therefore, we develop capsule collections where clothes
+                     go well with each other. You can mix them as
                     well to create stunning new looks! </p>
                 <a href="#" class="why_choose_us__lean-more-link">Learn More +</a>
             </div>
