added close tag to history div

--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
                 <p class="history__header-text">A few words about how our brand of designer clothes was created and
                     developed.</p>
             </div>
+        </div>
             <div class="history__main">
                 <div class="beginning">
                     <div class="beginning__img">
