--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
                     </div>
                 </div>
             </div>
+        </div>
             <!-- Sofiia block end-->
 
     </main>
