added hr and changed width in media

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <div class="history">
             <div class="history__header">
                 <h2 class="history__header-top-row">HISTORY</h2>
-                <h3 class="history__header-title"><span> - </span>Moments That Matters for Us.</h3>
+                <h3 class="history__header-title"><span> — </span>Moments That Matters for Us.</h3>
                 <p class="history__header-text">A few words about how our brand of designer clothes was created and
                     developed.</p>
             </div>
@@ -254,7 +254,7 @@
                         <h4 class="beginning__text-title">
                             Beginning
                         </h4>
-                        <span class="beginning__text-hr">-</span>
+                        <hr class="beginning__text-hr">
                         <p class="beginnind__text-paragraph">Johanna met Linda, and together they decided to create a
                             fashion
                             brand.</p>
@@ -269,7 +269,7 @@
                         <h4 class="featured__text-title">
                             Featured in Vogue
                         </h4>
-                        <span class="featured__text-hr">-</span>
+                        <hr class="featured__text-hr">
                         <p class="featured__text-paragraph">We were featured as the "Editor's Pick for Spring-Summer
                             2001".
                         </p>
@@ -284,7 +284,7 @@
                         <h4 class="first-offline-store__text-title">
                             First Offline Store
                         </h4>
-                        <span class="first-offline-store__text-hr">-</span>
+                        <hr class="first-offline-store__text-hr">
                         <p class="first-offline-store__text-paragraph">In 2019, we opened our first boutique on the 5th
                             Ave
                             in
