--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 
         <!--Svitlana Stasiuk block start-->
         <section class="why_choose_us">
+            <div class="why_choose_us_background">
+            </div>
             <div class="why_choose_us__text" id="why_choose_us">
                 <h2>WHY CHOOSE US</h2>
                 <h3 class="why_choose_us__text__slogan">
