Added @media Svitlana block

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <!--Svitlana Stasiuk block start-->
         <section class="why_choose_us">
-            <div class="why_choose_us_background">
+            <div class="why_choose_us__background">
             </div>
             <div class="why_choose_us__text" id="why_choose_us">
                 <h2>WHY CHOOSE US</h2>
@@ -122,16 +122,15 @@
                 </h3>
                 <h5>We create each outfit for you with great love and care.</h5>
                 <div class="why_choose_us__text__slogan">
-                    <span class="why_choose_us__text__slogan__dash">—</span>
-                    <h4>Jolly brand is:</h4>
-                    <ul>
+                <h4><span class="why_choose_us__text__slogan__dash">—</span>Jolly brand is:</h4>
+                    <ol>
                         <li class="why_choose_us__text__list">Capsule collections you can wear on any
                             occasion;</li>
                         <li class="why_choose_us__text__list">Only high quality and eco-friendly materials;
                         </li>
                         <li class="why_choose_us__text__list">A great variety of outfits for every taste and
                             size.</li>
-                    </ul>
+                    </ol>
                 </div>
                 <p class="why_choose_us__text__list1">We know the main problem of all women 
                     – a lot of clothes in the wardrobe but nothing to wear.
