--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
             <div class="why_choose_us__text" id="why_choose_us">
                 <h2>WHY CHOOSE US</h2>
-                <h3 class="why_choose_us__text__slogan"><span class="why_choose_us__text__slogan__dash">—</span>Things You'll Love About Jolly House.
+                <h3><span class="why_choose_us__text__slogan__dash">—</span>Things You'll Love About Jolly House.
                 </h3>
                 <h5>We create each outfit for you with great love and care.</h5>
                 <div class="why_choose_us__text__slogan">
