Changed why_choose_us__text__list Svitlana block

--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
                 <h5>We create each outfit for you with great love and care.</h5>
                 <div class="why_choose_us__text__slogan">
                 <h4><span class="why_choose_us__text__slogan__dash">—</span>Jolly brand is:</h4>
-                    <ol>
-                        <li class="why_choose_us__text__list">Capsule collections you can wear on any
+                    <ol class="why_choose_us_text__list">
+                        <li class="why_choose_us__text__list1">Capsule collections you can wear on any
                             occasion;</li>
-                        <li class="why_choose_us__text__list">Only high quality and eco-friendly materials;
+                        <li class="why_choose_us__text__list1">Only high quality and eco-friendly materials;
                         </li>
-                        <li class="why_choose_us__text__list">A great variety of outfits for every taste and
+                        <li class="why_choose_us__text__list1">A great variety of outfits for every taste and
                             size.</li>
                     </ol>
                 </div>
-                <p class="why_choose_us__text__list1">We know the main problem of all women 
+                <p class="why_choose_us__text__paragraph">We know the main problem of all women 
                     – a lot of clothes in the wardrobe but nothing to wear.
                     Therefore, we develop capsule collections where clothes
                      go well with each other. You can mix them as
