--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
             <div class="why_choose_us__background">
             </div>
             <div class="why_choose_us__text" id="why_choose_us">
-                <h2>WHY CHOOSE US</h2>
-                <h3><span class="why_choose_us__text__slogan__dash">—</span>Things You'll Love About Jolly House.
+                <h2 class="why_choose_us__h2">WHY CHOOSE US</h2>
+                <h3 class="why_choose_us__h3"><span class="why_choose_us__text__slogan__dash">—</span>Things You'll Love About Jolly House.
                 </h3>
-                <h5>We create each outfit for you with great love and care.</h5>
+                <h5 class="why_choose_us__h5">We create each outfit for you with great love and care.</h5>
                 <div class="why_choose_us__text__slogan">
                 <h4><span class="why_choose_us__text__slogan__dash">—</span>Jolly brand is:</h4>
                     <ol class="why_choose_us_text__list">
