editing img size in Catalog section

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
         </section>
-       
+
         <!--Roman Fedoriv end block 3-->
 
         <!--Svitlana Stasiuk block start-->
@@ -117,11 +117,12 @@
             </div>
             <div class="why_choose_us__text" id="why_choose_us">
                 <h2 class="why_choose_us__h2">WHY CHOOSE US</h2>
-                <h3 class="why_choose_us__h3"><span class="why_choose_us__text__slogan__dash">—</span>Things You'll Love About Jolly House.
+                <h3 class="why_choose_us__h3"><span class="why_choose_us__text__slogan__dash">—</span>Things You'll Love
+                    About Jolly House.
                 </h3>
                 <h5 class="why_choose_us__h5">We create each outfit for you with great love and care.</h5>
                 <div class="why_choose_us__text__slogan">
-                <h4><span class="why_choose_us__text__slogan__dash">—</span>Jolly brand is:</h4>
+                    <h4><span class="why_choose_us__text__slogan__dash">—</span>Jolly brand is:</h4>
                     <ol class="why_choose_us_text__list">
                         <li class="why_choose_us__text__list1">Capsule collections you can wear on any
                             occasion;</li>
@@ -131,10 +132,10 @@
                             size.</li>
                     </ol>
                 </div>
-                <p class="why_choose_us__text__paragraph">We know the main problem of all women 
+                <p class="why_choose_us__text__paragraph">We know the main problem of all women
                     – a lot of clothes in the wardrobe but nothing to wear.
                     Therefore, we develop capsule collections where clothes
-                     go well with each other. You can mix them as
+                    go well with each other. You can mix them as
                     well to create stunning new looks! </p>
                 <a href="#" class="why_choose_us__lean-more-link">Learn More +</a>
             </div>
@@ -149,24 +150,25 @@
                 <p>We create fashion clothes that are ready to wear. We love simple looks and share our vision with you.
                 </p>
             </div>
-            <ul class="catalog__body" style="display:flex;">
-                <li class="catalog__doby__dresses"><img src="img/catalog_block/girl1.jpg" alt="girl in a shirt"
-                        width="100%">
+            <ul class="catalog__body">
+                <li class="catalog__doby__dresses">
+                    <img src="img/catalog_block/girl1.jpg" alt="girl in a shirt">
                     <h4>Shirt & Tops</h4>
                     <p>Light tops and shirts made from natural materials such as linen, silk and others.</p>
                 </li>
-                <li class="catalog__doby__dresses"><img src="img/catalog_block/girl2.webp" alt="girl in a shirt"
-                        width="100%">
+                <li class="catalog__doby__dresses">
+                    <img src="img/catalog_block/girl2.webp" alt="girl in a shirt">
                     <h4>Dresses</h4>
                     <p>Casual and evening dresses in mini and midi lengths for your mazing looks</p>
                 </li>
-                <li class="catalog__doby__pants"><img src="img/catalog_block/girl3.webp" alt="girl in a shirt"
-                        width="100%">
+                <li class="catalog__doby__pants">
+                    <img src="img/catalog_block/girl3.webp" alt="girl in a shirt">
                     <h4>Pants</h4>
-                    <p>Pants made from natural fabrics and our own collection of jeans that will last you for years</p>
+                    <p>Pants made from natural fabrics and our own collection of jeans that will last you for years
+                    </p>
                 </li>
-                <li class="catalog__doby__accessories"><img src="img/catalog_block/girl4.webp" alt="girl in a shirt"
-                        width="100%">
+                <li class="catalog__doby__accessories">
+                    <img src="img/catalog_block/girl4.webp" alt="girl in a shirt">
                     <h4>Accessories</h4>
                     <p>Belts, rings, gloves necklaces and more for the finishing touch to your look</p>
                 </li>
@@ -182,29 +184,36 @@
                     <h2 class="accessories__text">ACCESSORIES</h2>
                     <h3 class="accessories__title">Treat Yourself to New Accessories.</h3>
                     <p class="accessories__about">We create accessories that perfectly match the outfits.</p>
-                    <p class="accessories__text-about">Your look will not be complete without accessories. We create beautiful and sophisticated accessories that highlight your natural beauty.</p>
+                    <p class="accessories__text-about">Your look will not be complete without accessories. We create
+                        beautiful and sophisticated accessories that highlight your natural beauty.</p>
                 </div>
                 <div class="accessories__bags">
-                    <div class="accessories__bags-img"><img class="accessories__bags-logo" src="img/accessories_block/bags.svg" alt="bags"></img></div>
+                    <div class="accessories__bags-img"><img class="accessories__bags-logo"
+                            src="img/accessories_block/bags.svg" alt="bags"></img></div>
                     <div class="accessories__about-prod">
                         <p class="accessories__bags-text">Leather bags</p>
-                        <p class="accessories__bags-item">Totes, crossbodies, satchels, and other bags can't wait to see you in our online and offline stores.</p>
+                        <p class="accessories__bags-item">Totes, crossbodies, satchels, and other bags can't wait to see
+                            you in our online and offline stores.</p>
                     </div>
                 </div>
                 <div class="accessories__hats">
-                    <div class="accessories__hats-img"><img class="accessories__hats-logo"src="img/accessories_block/hats.svg" alt="hats"></img>
+                    <div class="accessories__hats-img"><img class="accessories__hats-logo"
+                            src="img/accessories_block/hats.svg" alt="hats"></img>
                     </div>
                     <div class="accessories__about-things">
                         <p class="accessories__things">Hats and Caps</p>
-                        <p class="accessories__things-item">Straw hat or sports cap? Choose what suits you best for the current occasion and your style.</p>
+                        <p class="accessories__things-item">Straw hat or sports cap? Choose what suits you best for the
+                            current occasion and your style.</p>
                     </div>
                 </div>
                 <div class="accessories__gloves">
-                    <div class="accessories__gloves-img"><img class="accessories__gloves-logo" src="img/accessories_block/gloves.svg" alt="gloves"></img>
+                    <div class="accessories__gloves-img"><img class="accessories__gloves-logo"
+                            src="img/accessories_block/gloves.svg" alt="gloves"></img>
                     </div>
                     <div class="accessories__row">
                         <p class="accessories__stuff">Gloves and Scarves</p>
-                        <p class="accessories__stuff-item">Thin lace gloves became trendy again last year! Look for these accessories, as well as for silk and woven scarves in our store!</p>
+                        <p class="accessories__stuff-item">Thin lace gloves became trendy again last year! Look for
+                            these accessories, as well as for silk and woven scarves in our store!</p>
                     </div>
                 </div>
             </div>
@@ -224,7 +233,7 @@
                 <p class="history__header-text">A few words about how our brand of designer clothes was created and
                     developed.</p>
             </div>
-        
+
             <div class="history__main">
                 <div class="beginning">
                     <div class="beginning__img">
@@ -273,7 +282,7 @@
                 </div>
             </div>
         </div>
-            <!-- Sofiia block end-->
+        <!-- Sofiia block end-->
 
     </main>
 
