deleted extra <\img> tags in Tanya block

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 </div>
                 <div class="accessories__bags">
                     <div class="accessories__bags-img"><img class="accessories__bags-logo"
-                            src="img/accessories_block/bags.svg" alt="bags"></img></div>
+                            src="img/accessories_block/bags.svg" alt="bags"></div>
                     <div class="accessories__about-prod">
                         <p class="accessories__bags-text">Leather bags</p>
                         <p class="accessories__bags-item">Totes, crossbodies, satchels, and other bags can't wait to see
@@ -198,7 +198,7 @@
                 </div>
                 <div class="accessories__hats">
                     <div class="accessories__hats-img"><img class="accessories__hats-logo"
-                            src="img/accessories_block/hats.svg" alt="hats"></img>
+                            src="img/accessories_block/hats.svg" alt="hats">
                     </div>
                     <div class="accessories__about-things">
                         <p class="accessories__things">Hats and Caps</p>
@@ -208,7 +208,7 @@
                 </div>
                 <div class="accessories__gloves">
                     <div class="accessories__gloves-img"><img class="accessories__gloves-logo"
-                            src="img/accessories_block/gloves.svg" alt="gloves"></img>
+                            src="img/accessories_block/gloves.svg" alt="gloves">
                     </div>
                     <div class="accessories__row">
                         <p class="accessories__stuff">Gloves and Scarves</p>
