Just testing VS Code Terminal works

--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
         </div>
       </div>
     </section>
-
     <!--Roman Fedoriv end block 3-->
 
     <!--Svitlana Stasiuk block start-->
@@ -212,7 +211,6 @@
     <!--Ruslan block end-->
 
     <!--block start Tanya-->
-
     <section class="accessories">
       <div class="accessories__first">
         <div class="accessories__description">
@@ -369,7 +367,12 @@
     <!--Roman Fedoriv end block -->
   </main>
 
-  <footer></footer>
+
+  <footer>
+    
+  </footer>
+
+
 </body>
 
 </html>
